# soundswamp

./: .gitignore  FULL_SOURCE_CODE.txt  SoundSwarm_v3_patch_notes.md  go.mod  go.sum  server_log.txt
client/: CMakeLists.txt
client/android/: settings.gradle
client/android/app/: build.gradle
client/android/app/src/main/: AndroidManifest.xml
client/android/app/src/main/cpp/: CMakeLists.txt
client/android/app/src/main/java/com/soundswarm/client/: KeepAliveService.kt  MainActivity.kt  SoundSwarmClient.kt
client/android/app/src/main/res/layout/: activity_main.xml
client/android/app/src/main/res/values/: strings.xml
client/android/java/: SoundSwarmClient.kt
client/android/jni/: audio_player.cpp  audio_player.h  soundswarm_jni.cpp
client/core/include/: clock_sync.h  codec.h  engine.h  jitter_buffer.h  network.h  protocol.h
client/core/src/: clock_sync.cpp  codec.cpp  engine.cpp  jitter_buffer.cpp  network.cpp  protocol.cpp
client/ios/SoundSwarm/: AudioEngine.swift  SoundSwarmWrapper.h  SoundSwarmWrapper.mm
client/test/: main.cpp
cmd/soundswarm-server/: main.go
cmd/test_wasapi/: main.go
internal/capture/: capture.go  factory.go  stub.go  test_tone.go  wasapi_windows.go
internal/codec/: opus.go
internal/discovery/: mdns.go  qrcode.go
internal/protocol/: packet.go
internal/server/: http.go  tcp.go
internal/session/: manager.go
internal/stream/: manager.go  qos_windows.go
internal/surround/: demux.go
internal/sync/: clock.go  latency.go
web/: app.js  index.html  style.css
